# log4rs-guide

./: .editorconfig  Cargo.toml  LICENSE  README.md  minimal_stdout.yaml  minimal_stdout_with_trace.json  minimal_stdout_with_trace.yaml
src/: main.rs
src/docs/: mod.rs
src/guide/: minimal_stdout.rs  minimal_stdout_with_trace.rs  mod.rs
