[package]
name = "log4rs-guide"
version = "0.1.0"
authors = ["Kristopher Johnson <kris@kristopherjohnson.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
log4rs = { version = "1.0", features = ["all_components", "config_parsing", "yaml_format", "json_format"] }
